# car-visdrone

./: .gitignore  Makefile  VisDrone.yaml  benchmark.py  config.yaml  convert.ipynb  data_get.py  dataset_prepare.py  dockerfile  export.py  loss.py  main.py  model_onnx.py  pipeline.yaml  pyproject.toml  readme.md  train.ipynb  train.yaml  train_model.py  validate.py
Pipeline/: __init__.py  benchmark.py  dataset_prepare.py  export.py  model_onnx.py  train_model.py  utils.py  validate.py
demo/: app.py  build.ps1  consumers.py  model_onnx.py  requirements.txt  test_heap.py  test_rtsp.py
